# head-first-c-guide

./: .gitignore  CMakeLists.txt
chapter1/: card.c  card_counter.c  helloworld.c  readchararray.c  sizeof.c  stringfunc.c  strings.c
chapter10/: curl_pipe.c  fork_print.c  fork_scanf.c  multi_runner.c  redirect_so  redirect_so.c  signal_handler.c
chapter11/: browser_client.c
chapter11/include/: url_break.h
chapter12/: callable.c  counter.c  multi_print.c
chapter2/: array_pointer.c  char_array_pointer.c  const.c  fgets_array.c  intaddr.c  pointer.c  pointer_array.c  scanf.c  scanf_array.c  string_len.c  string_strstr.c
chapter3/: bermuda  bermuda.c  file_reader  file_reader.c  file_split  file_split.c  geo2json  geo2json.c  get_opt  get_opt.c  input.csv  input2.csv  message1.txt  message2.txt  output.json  output2.json  secret_message  secret_message.c
chapter4/: url_break.c
chapter5/: union_init  union_init.c
chapter6/: link_list.c
chapter7/: func_finder.c  qsort_struct.c  strategy_selector.c  variable_func.c
chapter8/: checksum.c  checksum.h  elliptical.c  encrypt.c  encrypt.h  hfcal.c  hfcal.h  test_code  test_code.c
chapter9/: diner_info  diner_info.c  execle_runner  execle_runner.c  execle_runner_failed  execle_runner_failed.c  guard_log  guard_log.c  say  say.c
