cmake_minimum_required(VERSION 3.22)
project(head_first_c C)

set(CMAKE_C_STANDARD 11)

add_executable(head_first_c
#        chapter1/card_counter.c
#        chapter1/strings.c
#        chapter1/readchararray.c
#        chapter2/intaddr.c
#        chapter2/pointer.c
#        chapter2/char_array_pointer.c
#        chapter2/array_pointer.c
#        chapter2/scanf_array.c
#        chapter2/fgets_array.c
#        chapter2/pointer_array.c
#        chapter2/string_len.c
#        chapter2/string_strstr.c
#        chapter3/secret_message.c
#        chapter3/bermuda.c
#        chapter3/file_split.c
#        chapter5/union_init.c
#        chapter3/file_reader.c
#        chapter6/link_list.c
#        chapter7/func_finder.c
#        chapter7/strategy_selector.c
#        chapter7/variable_func.c
#        chapter7/qsort_struct.c
#        chapter8/encrypt.h
#        chapter8/encrypt.c
#        chapter8/checksum.h
#        chapter8/checksum.c
#        chapter8/test_code.c
#        chapter9/guard_log.c
#        chapter9/say.c
#        chapter9/diner_info.c
#        chapter9/execle_runner.c
#        chapter10/redirect_so.c
#        chapter10/curl_pipe.c
#        chapter10/fork_print.c
#        chapter10/fork_scanf.c
#        chapter3/get_opt.c
#        chapter8/hfcal.c
#        chapter8/elliptical.c
#        chapter10/signal_handler.c
#        chapter10/multi_runner.c
#        chapter11/browser_client.c
        chapter4/url_break.h
        chapter4/url_break.c)
